Source/Plugins/Core/com.equella.core/resources/web/sass/legacy.scss
/* ... */
#mainDiv #content-body {
  float: none;
  width: auto;
  padding: 8px 0 32px 0;
}

#mainDiv .mainCols {
  display: flex;
  flex-grow: 1;
  justify-content: space-between;
  #col2 {
    min-width: 240px;
  }
}

#mainDiv .selectiondashboard #col1 {
  width: 368px;
}

#mainDiv #col1,
#mainDiv #col {
  flex-grow: 1;
  float: none;
}

.area h3 {
  @include typography-headline-6;
  color: #444444;
  word-wrap: break-word;
  padding-top: 8px;
}

.area p,
.area ol,
.area ul.standard {
  @include typography-body-1;
  margin: 20px;
}

.area h2 {
  @include typography-headline-4;
  color: #444444;
}

.button-strip {
  display: flex;
  flex-direction: row-reverse;
  padding: 8px;
  .btn {
    margin-right: 8px;
  }
}

.CodeMirror {
  line-height: 1;
  position: relative;
  overflow: hidden;
  background: white;
  color: black;
}

/*****************************************************************************
Settings page styling
*****************************************************************************/

div.leftPanel {
  width: 50%;
}

div.rightPanel {
  width: 40%;
}

.settingContainer.wide {
  width: 100%;
}

//recipient selector
.modal-content-inner #right-cloumn {
  width: 43%;
}

.settingField input[type="text"].hasDatepicker {
  width: 200px !important;
}

.area {
  .settingContainer {
    input [type="text"] {
      width: 100% !important;
    }
  }

  .control {
    li {
      padding-top: 4px;
      padding-bottom: 4px;
    }
  }

  .checkbox {
    :first-child {
      padding-top: 8px;
    }
    padding-top: 4px;
    padding-bottom: 4px;
  }

  .customfile {
    width: 400px;
  }
}

.checklist {
  li {
    padding-bottom: 8px;
  }
}

.mimeexttemplate {
  width: 100%;
}

.extension-buttons {
  button {
    margin-right: 8px;
    margin-bottom: 8px;
  }
}

#title-slider label {
  margin-top: 15px;
}

#lce_selectCustom_opener {
  position: relative;
  top: -7px;
  left: 465px;
}

.settingHelp {
  padding-top: 20px;
  color: $menuTextColor;
}

//scripted portlet
.load-action {
  .dropdown-toggle {
    b:before {
      content: "\e313";
      font-family: "Material Icons";
      font-size: 16px;
      color: white;
      font-style: normal;
      vertical-align: middle;
    }
    color: set-text-color($primaryColor);
    min-width: 1px;
    margin-left: 2px;
  }
  .dropdown-menu {
    display: none;
  }
  &.open {
    .dropdown-menu {
      display: block;
      border: 1px solid rgba(0, 0, 0, 0.42);
      width: 244px;
      padding: 8px;
      li {
        padding-top: 8px;
        padding-bottom: 8px;
        :hover {
          background-color: rgba(224, 224, 224, 1);
          color: set-text-color(white);
        }
      }
    }
  }
}

div.load-action button.dropdown-toggle {
  top: 134px;
  right: 30px;
}

/*****************************************************************************
   Generic Dialog Styling
  *****************************************************************************/
div[class*="fancy-bg"] {
  display: none;
}

.modal-content-inner h3 {
  @include typography-subtitle-1;
  margin: 20px 0 10px;
}

.modal-content-inner h3:first-child,
.modal-content-inner p:first-child {
  margin-top: 0;
}

.modal-content-inner p {
  font-size: 14px;
  line-height: 14px;
  margin: 10px 0;
}

.modal-content {
  -moz-background-clip: border;
  -moz-background-inline-policy: continuous;
  -moz-background-origin: padding;
  padding: 15px 0 0;
  overflow-y: auto;
  /* See #6290 for why this is here */
  min-height: 0%;
}

.modal-content-background {
  -moz-background-clip: border;
  -moz-background-inline-policy: continuous;
  -moz-background-origin: padding;
  position: relative;
  height: auto;
}

.modal-content-inner {
  padding: 0 18px 15px;
}

.select2-container {
  z-index: 9999;
}

.modal-title h3 {
  -moz-background-clip: border;
  -moz-background-inline-policy: continuous;
  -moz-background-origin: padding;
  /* cursor:move; Dialog cannot be moved */
  display: block;
  @include typography-headline-6;
}

.modal {
  -moz-background-clip: border;
  -moz-background-inline-policy: continuous;
  -moz-background-origin: padding;
  padding: 25px;
  background-color: white;
}

.modal-footer {
  background: white;
  clear: both;
  width: 100%;
  height: 50px;
}

.modal-footer-inner {
  padding-top: 20px;
  padding-right: 18px;
  text-align: right;
  display: flex;
  float: right;
}

.modal-footer-inner input {
  margin-left: 5px;
}

.modal img.modal_close {
  position: absolute;
  right: 28px;
  top: 28px;
  cursor: pointer;
}

a.feedlink {
  &:before {
    content: "\e0e5";
    font-family: "Material Icons";
    font-size: 24px;
    color: set-text-color($primaryColor);
  }
  padding: 5px;
  display: inline-block;
}

.paging {
  clear: both;
  text-align: center;
}

.paging ul li {
  display: inline;
  margin: 0 2px;
}

.action-link {
  padding: 0 0 0 12px;
  background: url(../images/icons/blue-arrow.ltr.png) 0 3px no-repeat;
}

.action-link-extra,
.action-link {
  font-size: 10px;
}

/*****************************************************************************
Zebra tables
*****************************************************************************/

.sortData {
  display: none;
}

.filterData {
  display: none;
}

div.tableContainer {
  position: relative;
}

div.tableFilter {
  text-align: left;
  vertical-align: middle;
  white-space: nowrap;
  padding-bottom: 5px;
  float: right;
}

div.tableContainer div.tableFilter {
  position: absolute;
  top: -30px;
  right: 0;
}

div.tableFilter input.filterBox {
  width: 300px !important;
  background-image: url(../../images/component/tablefilter.png);
  background-repeat: no-repeat;
  background-position: right;
  padding-right: 22px;
}

div.tableFilter input.blur {
  color: #aaaaaa;
  background-image: url(../../images/component/tablefilterdis.png);
}

table.zebra {
  width: 100%;
  margin: 10px 0;
  border-collapse: collapse;
}

table.zebra.withfilter {
  margin-top: 5px;
}
/* ... */

